2017-10-26  Adrian Perez de Castro  <aperez@igalia.com>

        [WPE] Use proper shared object versioning for libWPEWebKit.so
        https://bugs.webkit.org/show_bug.cgi?id=178878

        Reviewed by Michael Catanzaro.

        Move the CALCULATE_LIBRARY_VERSIONS_FROM_LIBTOOL_TRIPLE() to a new CMake include file,
        and use it both for the GTK+ and WPE ports. Also add a SET_PROJECT_VERSION() macro to
        unify setting the PROJECT_VERSION* family of variables.

        * Source/cmake/OptionsGTK.cmake: Use the common macros imported from VersioningUtils.cmake.
        * Source/cmake/OptionsWPE.cmake: Properly assign a shared object version to libWPEWebKit.so,
        using the common macros from VersioningUtils.cmake.
        * Source/cmake/VersioningUtils.cmake: Added.

2017-10-26  Adrian Perez de Castro  <aperez@igalia.com>

        [GTK] WebKit library .so version is not being set correctly
        https://bugs.webkit.org/show_bug.cgi?id=178873

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsGTK.cmake: Adjust name of the target for which the .so version gets calculated.

2017-10-24  Stephan Szabo  <stephan.szabo@sony.com>

        [Win][JSCOnly] Make jsconly build testapi and dlls and copy dlls when running tests
        https://bugs.webkit.org/show_bug.cgi?id=177279

        Reviewed by Yusuke Suzuki.

        * Source/cmake/OptionsJSCOnly.cmake:

2017-10-21  Tim Horton  <timothy_horton@apple.com>

        Turn on ccache for Mac cmake builds by default
        https://bugs.webkit.org/show_bug.cgi?id=177059

        Reviewed by Sam Weinig.

        * Source/cmake/WebKitCCache.cmake: Added.
        * Source/cmake/WebKitCommon.cmake:
        Turn on ccache for Mac CMake builds (Makefile and Ninja generators only)
        if it's installed, making use of CMake's ability to wrap the compiler invocation.

2017-10-20  Antoine Quint  <graouts@apple.com>

        [Web Animations] Provide basic timeline and animation interfaces