@@ -177,7 +177,13 @@ if (ENABLE_TOOLS)
     add_subdirectory(Tools)
 endif ()
 
-add_subdirectory(PerformanceTests)
+if ("${PORT}" STREQUAL "GTK" OR "${PORT}" STREQUAL "WPE")
+    if (DEVELOPER_MODE)
+        add_subdirectory(PerformanceTests)
+    endif ()
+else ()
+    add_subdirectory(PerformanceTests)
+endif ()
 
 # -----------------------------------------------------------------------------
 # Print the features list last, for maximum visibility.
